--- a/css/ebi-global.css
+++ b/css/ebi-global.css
@@ -68,6 +68,7 @@ a:active {
 .training-background { background: rgb(233,180,0); }
 .industry-background { background: rgb(0,134,180); }
 .elixir-background { background: rgb(251,106,42); }
+.white-background { background: rgb(255,255,255); }
 
 .ebi-color { color: rgb(0,124,130); }
 .services-color { color: rgb(2,100,105); }
@@ -75,6 +76,7 @@ a:active {
 .training-color { color: rgb(233,180,0); }
 .industry-color { color: rgb(0,134,180); }
 .elixir-color { color: rgb(251,106,42); }
+.white-color { color: rgb(255,255,255); }
 
 /* todo: map misc framework colours to ebi colours...
 
