--- a/css/ebi-industry-colours.css
+++ b/css/ebi-industry-colours.css
@@ -60,7 +60,7 @@
     your custom colour palette in a consistent manner */
 
 /* Links */
-a:link,
+a,
 a:visited { border-bottom-color: #346189; }
 
 a:hover,
@@ -78,7 +78,7 @@ a.special:active {
 	}
 
 
-a:link { color: #171560; }
+a { color: #171560; }
 
 a:hover,
 a:focus,
@@ -94,12 +94,12 @@ h2 { color: #D49946; }
 
 h3 { color: #9F7E4F; }
 
-h1 a:link,
-h2 a:link,
-h3 a:link,
-h4 a:link,
-h5 a:link,
-h6 a:link,
+h1 a,
+h2 a,
+h3 a,
+h4 a,
+h5 a,
+h6 a,
 h1 a:visited,
 h2 a:visited,
 h3 a:visited,
