--- a/css/ebi-training-colours.css
+++ b/css/ebi-training-colours.css
@@ -59,7 +59,7 @@
     your custom colour palette in a consistent manner */
 
 /* Links */
-a:link,
+a,
 a:visited { border-bottom-color: rgb(233,180,0); }
 
 a:hover,
@@ -77,7 +77,7 @@ a.special:active {
   }
 
 
-a:link {color: #222;}
+a {color: #222;}
 
 a:hover,
 a:focus,
@@ -104,12 +104,12 @@ h2 {color: rgb(233,180,0);}
 
 h3 { color: #444; }
 
-h1 a:link,
-h2 a:link,
-h3 a:link,
-h4 a:link,
-h5 a:link,
-h6 a:link,
+h1 a,
+h2 a,
+h3 a,
+h4 a,
+h5 a,
+h6 a,
 h1 a:visited,
 h2 a:visited,
 h3 a:visited,
