--- a/css/ebi-global.css
+++ b/css/ebi-global.css
@@ -297,7 +297,7 @@ a:active {
 
   #local-masthead {
     background-repeat: no-repeat;
-    background-position: right 82%;
+    background-position: 100% 82%;
     background-size: cover;
     background-image: url('data:image/svg+xml;charset=UTF-8,<svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="147 248 60 248" xml:space="preserve"><polygon class="st0" fill="#000" fill-opacity="0.05" points="147,363.6 259.3,363.6 259.3,428.4 203.2,460.9 147,428.4 "/></svg>');
   }
