Cleans up colour templates
removes unused code as well, as done through  a wget and grep of
www.ebi.ac.uk domain

--- a/css/ebi-global.css
+++ b/css/ebi-global.css
@@ -1,6 +1,6 @@
 /*
   ebi-global.css
-  Style rules for common EBI website elements - global and local headers and footers.
+  Style rules for common EMBL-EBI website elements - global and local headers and footers.
   These build atop and tweak Foundation's base styles, which we do not directly edit.
 */
 
