--- a/css/ebi-global.css
+++ b/css/ebi-global.css
@@ -596,11 +596,11 @@ a:active {
     font-size: 1.4rem;
     line-height: 1.4em;
     padding-top: 50%;
-    width: 95%;
+    width: 83%;
     content: " »";
   }
-  .with-overlay .caption a.inner:after { content: " "; }
-  .with-overlay .caption:hover a.inner { color: #fff; }
+  .with-overlay .caption a:after {content: " »"; display: inline-block; float: right; font-size: 4rem; position: relative; top: -1rem; left: 2rem;}
+  .with-overlay .caption:hover a.inner { color: #fff;  }
 
   .serif { font-family: 'EB Garamond', 'georgia', serif;  font-size: 1.1rem; }
   .sans-serif { font-family: "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;  font-size: 1.1rem; }
