--- a/css/ebi-global.css
+++ b/css/ebi-global.css
@@ -712,8 +712,10 @@ table.tablesorter thead tr .header {
 table.tablesorter thead tr .headerSortUp { background-image: url(../libraries/tablesorter/themes/blue/asc.gif); }
 table.tablesorter thead tr .headerSortDown { background-image: url(../libraries/tablesorter/themes/blue/desc.gif); }
 
-/* wide screen support */
+/* No colour striping tables */
+table.no-stripe tbody tr:nth-child(even) { background-color: #fff; } 
 
+/* wide screen support */
 @media screen and (min-width: 40em) {
   body.full-width .row {
       max-width: 96%;
