--- a/css/ebi-global.css
+++ b/css/ebi-global.css
@@ -718,6 +718,20 @@ h6 a span.link-pdf { display:none; }
   #ebi_search_results { display: none; }
 }
 
+/* Clearable text inputs
+   Also need JS, via: http://stackoverflow.com/questions/6258521/clear-icon-inside-input-text */
+input.clearable {
+  background: #fff url('data:image/gif;base64,R0lGODlhBwAHAIAAAP///5KSkiH5BAAAAAAALAAAAAAHAAcAAAIMTICmsGrIXnLxuDMLADs=') no-repeat right -10px center;
+  border: 1px solid #999;
+  padding: 3px 18px 3px 4px;
+  border-radius: 3px;
+  transition: background 0.4s;
+}
+input.clearable.x  { background-position: right 5px center; } /* (jQ) Show icon */
+input.clearable.onX{ cursor: pointer; } /* (jQ) hover cursor style */
+input.clearable::-ms-clear {display: none; width:0; height:0;} /* Remove IE default X */
+
+
 /* Tablesorter styling */
 table.tablesorter thead tr .header {
   background-image: url(../libraries/tablesorter/themes/blue/bg.gif);
