Update research header colour

--- a/css/ebi-global.css
+++ b/css/ebi-global.css
@@ -370,7 +370,7 @@ a:active {
   body.section-research #local-title h1,
   body.section-research #local-title p,
   body.section-research #local-title a {
-    color: #222;
+    color: #FFF;
   }
   body.section-services #local-masthead {
     background: rgb(2,100,105);
